tests/tests/failing_examples/bad_attr.stderr
error: custom attribute panicked
 --> $DIR/bad_attr.rs:3:1
  |
3 | #[hoist_temporaries(snack foods)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid attribute - expected #[hoist_temporaries(var1, var2, ...)]
